added sweet alert package used it for an error message if the user tries to sell an item without being logged in

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
   <!--Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/assets/sweetalert/dist/sweetalert.css">
   <!--Custom CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
   <!-- Angular -->
@@ -160,6 +161,8 @@
   <script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
   <!-- Materialize Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <script src="/assets/sweetalert/dist/sweetalert.min.js"></script> 
+  
   <!--Custom JS -->
   <script type="text/javascript" src="/assets/js/custom.js"></script>
 </body>
