added a confirmation message with sweetalert when a user tries to sell an item

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
                   </div>
                   <div class="row">
                     <div class="input-field col s12 m12 l12">
-                      <button href="#" type="submit" class="waves-effect waves-green btn-flat right" ng-show="userId">Sell Item</button>
+                      <button href="#" type="submit" class="waves-effect waves-green btn-flat right addItemBtn" ng-show="userId">Sell Item</button>
                       <a class=" btn-flat right addItemDisabledBtn disabled" ng-hide="userId">Sell Item</a>
                     </div>
                   </div>
