--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       </div>
     </nav>
     <!-- Register Modal-->
-      <div id="modal1" class="modal">
+      <div id="modal1" class="modal gradient">
         <div class="modal-content">
           <h4>Register</h4>
           <div class="row">
@@ -59,7 +59,7 @@
                   <label for="email">Email</label>
                 </div>
               </div>
-              <div class="modal-footer">
+              <div class="modal-footer gradient">
                 <button href="#" type="submit" class=" modal-action modal-close waves-effect waves-green btn-flat">Register</button>
               </div>
             </form>
@@ -67,7 +67,7 @@
         </div>
       </div>
       <!-- Login Modal -->
-      <div id="modal2" class="modal">
+      <div id="modal2" class="modal gradient">
         <div class="modal-content">
           <h4>Log In</h4>
           <form ng-submit="login()">
@@ -83,7 +83,7 @@
                 <label for="password">Password</label>
               </div>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer gradient">
               <button href="#" type= "submit" class=" modal-action modal-close waves-effect waves-green btn-flat">Log In</button>
             </div>
           </form>
